# eu_survey_correlation

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.cursor/plans/: github_action_data_sync_fb433ccb.plan.md  llm_match_validation_570e1470.plan.md  survey-vote_semantic_matching_37b9b75d.plan.md
.github/workflows/: sync-matches.yml
backend/: dashboard.py
backend/notebooks/: 1_get_excel_files.ipynb  2_get_all_questions.ipynb  3_get_question_answers.ipynb  4_validate_matches.ipynb  5_ess_scraping.ipynb  5_review_judgments.ipynb  6_demographic_alignment.ipynb  MAIN_pipeline.ipynb  draft.ipynb  embed_vote_summaries.ipynb  embedding_checks.ipynb  extract_sheets.ipynb  get_excel_files.ipynb  pipeline.ipynb  read_one_excel.ipynb  tt.txt
backend/scripts/: draft.ipynb  embed_quickly.py  embed_surveys.py  embed_votes.py  export_matches_json.py  extract_ess_questions.py  extract_volume_b_answers.py  filter_survey_questions.py  find_matches.py  generate_training_data.py  match_ess_to_votes.py  match_surveys_to_votes.py  process_ess_pipeline.py  run_classification.py  run_eurobarometer_scraper.py  simplify_questions.py  train_classifier.py  validate_clean_matches.py  validate_matches.py
data/: survey_dataset_urls.json
data/cache/: simplified_text.json
data/classification/: enriched_matches.csv  filtered_matches.csv  pairs_validated.csv  questions_classified.csv  votes_classified.csv
data/embeddings/: ess_embeddings.parquet
data/matches/: ess_vote_matches_clean.csv  simplified_michlou_survey_vote_matches_clean.csv  survey_vote_matches.csv  survey_vote_matches_clean.csv  (+2 more)
streamlits/: review_pairs.py
(+145 files in other folders)
