[project]
name = "eu_survey_correlation"
version = "0.1.0"
description = "the correlation between the EU survey and votes at the parliament"
authors = [
    { name = "Dawta", email = "dawta.contact@proton.me" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.5.0",
    "requests>=2.28.0",
    "beautifulsoup4>=4.12.2",
    "selenium>=4.18.1",
    "python-dotenv>=0.19.0",
    "rich>=12.0.0",
    "tqdm>=4.67.1",
    "loguru>=0.7.2",
]

[tool.hatch.build.targets.wheel]
packages = ["backend/src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
