[project]
name = "eu_survey_correlation"
version = "0.1.0"
description = "the correlation between the EU survey and votes at the parliament"
authors = [
    { name = "Dawta", email = "dawta.contact@proton.me" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=1.5.0",
    "requests>=2.28.0",
    "beautifulsoup4>=4.12.2",
    "selenium>=4.18.1",
    "python-dotenv>=0.19.0",
    "rich>=12.0.0",
    "tqdm>=4.67.1",
    "loguru>=0.7.2",
    "ipykernel>=6.29.5",
    "google-genai>=1.62.0",
    "openpyxl>=3.1.5",
    "sentence-transformers>=5.2.2",
    "pyarrow>=23.0.0",
    "matplotlib>=3.10.8",
    "ollama>=0.4.0",
    "xgboost>=2.0.0",
    "scikit-learn>=1.4.0",
    "streamlit>=1.30.0",
    "plotly>=5.18.0",
]

[tool.hatch.build.targets.wheel]
packages = ["backend/src/eu_survey_correlation"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
